# cyborg

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  codecov.yml  count_lines.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  requirements_cuda.txt  requirements_cuda_lock.txt  requirements_lock.txt  requirements_lock_linux.txt
ai/llm/tinyllm/: BUILD.bazel  SAFETENSORS_IMPLEMENTATION.md  __init__.py  _tinygrad_cpu_fix.py  benchmark.py  cli.py  kv_cache.py  requirements.txt  test_gpt2.py  test_kv_cache2.py  test_kv_cache3.py  test_kv_cache_prefix.py  test_kv_cache_xl.py  test_kvcache_gpt2.py  test_llama.py  test_opt.py  test_prealloc_kvcache.py  test_weight_loader.py
ai/llm/tinyllm/models/: __init__.py  base.py  config.py  generate.py  gpt2.py  llama.py  opt.py
apps/cybervision/: .gitignore  BUILD.bazel  SEGMENTATION_IMPLEMENTATION.md  __init__.py  main.py  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  run_server.sh  server.py  vitest.config.js
apps/cybervision-player/: BUILD.bazel  __init__.py  main.py  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  server.py  vitest.config.js
apps/cybervision-player/webroot/: index.html
apps/cybervision/docs/: DOMINANT_COLOR.md
apps/cybervision/playwright-report/: index.html
apps/cybervision/test-results/: .last-run.json
apps/cybervision/webroot/: index.html
apps/earth-3d/: BUILD.bazel  Cargo.toml  README.md
apps/earth-3d/docs/: MATH_IMPLEMENTED.md  MATH_IN_LIBRARIES.md
apps/earth-3d/shaders/: basic.metal  lit_textured.metal  stars.metal  textured.metal
apps/earth-3d/src/: camera.rs  main.rs  renderer.rs  stars.rs  texture.rs
apps/halftone_web/: BUILD.bazel  README.md  __init__.py  main.py  requirements.txt  server.py
apps/halftone_web/webroot/: halftone.html  index.html
apps/tokenizer_viz/: BUILD.bazel  README.md  __init__.py  server.py
apps/tokenizer_viz/tokenizer_viz_backup/: main.py
apps/tokenizer_viz/webroot/: tokenizer.html
constraints/: BUILD.bazel
cuda/: .bazelrc  .gitignore  BUILD  BUILD.bazel  Makefile  README.md  REDUCTION_EXPERIMENTS.md  SOFTMAX_EXPERIMENTS.md  TINYGRAD_COMPARISON.md  TODO.md  VECTOR_ADD_EXPERIMENTS.md  benchmark_blocksize.sh  benchmark_cuda_vs_tinygrad.sh  benchmark_reduce.sh  check_coop.cu  cuda_utils.cu  cuda_utils.h  defs.bzl  elementwise_kernels.cu  elementwise_kernels.h  mem_benchmark.cu  reduce.cu  reduce_kernels.cu  reduce_kernels.h  requirements.txt  run_comparison.py  softmax.cu  softmax_kernels.cu  softmax_kernels.h  test_vma_blocksize.sh  test_vma_sequential.sh  tinygrad_comparison.py  vector.cu  vector_add  vector_add.cu  vector_init.cu  vector_init.h  vector_kernels.cu  vector_kernels.h  vector_triton.py
cuda/batch_softmax/: BUILD.bazel  batch_softmax.cpp  batch_softmax_autotuner.cu  batch_softmax_autotuner.h  batch_softmax_cub.cu  batch_softmax_cub.h  batch_softmax_cudnn.cu  batch_softmax_cudnn.h  batch_softmax_hybrid.cu  batch_softmax_hybrid.h  batch_softmax_kernel.h  batch_softmax_multi_warp.cu  batch_softmax_multi_warp.h  batch_softmax_naive.cu  batch_softmax_naive.h  batch_softmax_online_multi_warp.cu  batch_softmax_online_multi_warp.h  batch_softmax_online_warp.cu  batch_softmax_online_warp.h  batch_softmax_warp.cu  batch_softmax_warp.h
cuda/common/: BUILD.bazel
cuda/common/benchmark/: benchmark_utils.cu  benchmark_utils.h
cuda/docs/: MEMORY_EXPERIMENTS.md  TINYGRAD_COMPARISON.md  TODO.md  VECTOR_ADD_EXPERIMENTS.md
cuda/elementwise/: BUILD.bazel  elementwise.cu  elementwise_test.cpp  normalize.cu  normalize.h  vector_add.cu  vector_add.h  vector_fma.cu  vector_fma.h  vector_mul.cu  vector_mul.h
cuda/matmul/: BUILD  BUILD.bazel  OPTIMIZATIONS.md  OPTIMIZATION_RESULTS.md  matmul.cpp  matmul_1d_blocktile.cu  matmul_1d_blocktile.h  matmul_2d_blocktile.cu  matmul_2d_blocktile.h  matmul_async_bf16.cu  matmul_async_bf16.h  matmul_best_bf16.cu  matmul_best_bf16.h  matmul_coalesced.cu  matmul_coalesced.h  matmul_compact_bf16.cu  matmul_compact_bf16.h  matmul_cublas.cu  matmul_cublas.h  matmul_cublas_bf16.cu  matmul_cublas_bf16.h  matmul_hybrid_bf16.cu  matmul_hybrid_bf16.h  matmul_kernel.h  matmul_large_tile_bf16.cu  matmul_large_tile_bf16.h  matmul_mma_bf16.cu  matmul_mma_bf16.h  matmul_naive.cu  matmul_naive.h  matmul_smem.cu  matmul_smem.h  matmul_stage3_bf16.cu  matmul_stage3_bf16.h  matmul_swizzle_bf16.cu  matmul_swizzle_bf16.h  matmul_tuned_bf16.cu  matmul_tuned_bf16.h  matmul_unroll_bf16.cu  matmul_unroll_bf16.h  (+38 more)
cuda/reduce/: BUILD.bazel  max_reduce.cu  max_reduce.h  reduce.cpp  reduce_test.cpp  sum_reduce.cu  sum_reduce.h  sum_reduce_atomic.cu  sum_reduce_atomic.h
cuda/softmax/: BUILD  BUILD.bazel  bench.py  block_size_test.py  run_triton_demo.sh  softmax.cpp  softmax.cu  softmax_c_api.cu  softmax_c_api.h  softmax_cub.cu  softmax_cub.h  softmax_cub_block.cu  softmax_cub_block.h  softmax_cub_device.cu  softmax_cub_device.h  softmax_cudnn.cu  softmax_cudnn.h  softmax_fused.cu  softmax_fused.h  softmax_fused1.cu  softmax_fused1.h  softmax_fused2.cu  softmax_fused2.h  softmax_fused3.cu  softmax_fused3.h  softmax_kernel.h  softmax_multipass.cu  softmax_multipass.h  softmax_naive.cu  softmax_naive.h  softmax_online.cu  softmax_online.h  softmax_online_simple.cu  softmax_online_simple.h  softmax_online_warp.cu  softmax_online_warp.h  softmax_pybind.cpp  softmax_small.cu  softmax_small.h  softmax_test.cpp  (+5 more)
libs/cybervision-core/: BUILD.bazel  histogram.js  ml-inference.js  webgl-renderer.js  webgpu-renderer.js
libs/cybervision-core/shaders/: ascii.frag.glsl  ascii.wgsl  clustering.frag.glsl  dither.frag.glsl  dither.wgsl  duotone.frag.glsl  duotone.wgsl  edges.wgsl  glitch.frag.glsl  halftone.frag.glsl  halftone.wgsl  mosaic.frag.glsl  oilpaint.frag.glsl  oilpaint.wgsl  passthrough.frag.glsl  pixelsort-segment.wgsl  posterize.frag.glsl  posterize.wgsl  rotate.wgsl  segmentation.wgsl  thermal.frag.glsl  thermal.wgsl  twirl.frag.glsl  twirl.wgsl  vignette.frag.glsl  vignette.wgsl
(+194 files in other folders)
