module(
    name = "cyborg",
    version = "0.1.0",
)

# ============================================================================
# Platform Constraints
# ============================================================================

bazel_dep(name = "platforms", version = "1.0.0")

# ============================================================================
# CUDA Rules
# ============================================================================

bazel_dep(name = "rules_cuda", version = "0.2.5")

# Register CUDA toolchains (auto-detect CUDA installation)
cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    # Specify compute capabilities for WMMA support (Volta+ / SM 7.0+)
    toolkit_path = "/usr/local/cuda",
)

# ============================================================================
# Rust Rules
# ============================================================================

bazel_dep(name = "rules_rust", version = "0.68.1")

# Rust toolchain configuration
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate universe for dependency management
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//apps/earth-3d:Cargo.toml",
    ],
)
use_repo(crate, "crates")
