module(
    name = "cyborg",
    version = "0.1.0",
)

# ============================================================================
# Platform Constraints
# ============================================================================

bazel_dep(name = "platforms", version = "1.0.0")

# ============================================================================
# Testing
# ============================================================================

bazel_dep(name = "googletest", version = "1.15.2")

# ============================================================================
# CUDA Rules
# ============================================================================

bazel_dep(name = "rules_cuda", version = "0.2.5")

# Register CUDA toolchains (auto-detect CUDA installation)
cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain()

# ============================================================================
# Rust Rules
# ============================================================================

bazel_dep(name = "rules_rust", version = "0.68.1")

# Rust toolchain configuration
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate universe for dependency management
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//apps/earth-3d:Cargo.toml",
    ],
)
use_repo(crate, "crates")

# ============================================================================
# Python Rules
# ============================================================================

bazel_dep(name = "rules_python", version = "0.38.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.13",
)
use_repo(python, "python_3_13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Consolidated Python dependencies
# TODO: Add a Bazel-wrapped uv lock target (e.g., //scripts:lock_python_deps) for consistent updates.
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//:requirements_lock.txt",  # Locked dependencies with transitives
    requirements_linux = "//:requirements_lock_linux.txt",
)

use_repo(pip, "pip")

# ============================================================================
# JavaScript/Node.js Rules
# ============================================================================

bazel_dep(name = "aspect_rules_js", version = "2.1.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm_cybervision",
    pnpm_lock = "//apps/cybervision:pnpm-lock.yaml",
)

npm.npm_translate_lock(
    name = "npm_cybervision_player",
    pnpm_lock = "//apps/cybervision-player:pnpm-lock.yaml",
)

use_repo(npm, "npm_cybervision", "npm_cybervision_player")
