load("@rules_cuda//cuda:defs.bzl", "cuda_library", "cuda_binary")
load("@rules_python//python:defs.bzl", "py_binary")

# ============================================================================
# Shared CUDA Libraries (used across multiple projects)
# ============================================================================

# Utility functions for CUDA (error checking, statistics)
cuda_library(
    name = "cuda_utils",
    srcs = ["cuda_utils.cu"],
    hdrs = ["cuda_utils.h"],
    target_compatible_with = ["//constraints:cuda"],
    visibility = ["//cuda:__subpackages__"],
)

# Vector initialization utilities
cuda_library(
    name = "vector_init",
    srcs = ["vector_init.cu"],
    hdrs = ["vector_init.h"],
    deps = [":cuda_utils"],
    target_compatible_with = ["//constraints:cuda"],
    visibility = ["//cuda:__subpackages__"],
)

# ============================================================================
# Root-level CUDA Projects (standalone tools)
# ============================================================================

# Memory benchmark binary
cuda_binary(
    name = "mem_benchmark",
    srcs = ["mem_benchmark.cu"],
    deps = [":cuda_utils"],
    target_compatible_with = ["//constraints:cuda"],
)

# ============================================================================
# Python Benchmarks (Bazel-managed deps)
# ============================================================================

py_binary(
    name = "tinygrad_comparison",
    srcs = ["tinygrad_comparison.py"],
    deps = [
        "@pip//numpy",
        "@pip//tinygrad",
    ],
    target_compatible_with = ["//constraints:cuda"],
)

py_binary(
    name = "run_comparison",
    srcs = ["run_comparison.py"],
    data = [
        "//cuda/elementwise:elementwise",
        "//cuda/reduce:reduce",
        ":tinygrad_comparison",
        "//cuda/softmax:softmax",
    ],
    deps = ["@bazel_tools//tools/python/runfiles"],
    target_compatible_with = ["//constraints:cuda"],
)
