load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//apps/cybervision-player:vitest/package_json.bzl", vitest_bin = "bin")
load("@npm//apps/cybervision-player:@playwright/test/package_json.bzl", playwright_bin = "bin")

npm_link_all_packages(name = "node_modules")

# Shared test data to avoid conflicting actions
filegroup(
    name = "webroot_files",
    srcs = glob(["webroot/**"]),
)

py_binary(
    name = "cybervision-player",
    srcs = [
        "__init__.py",
        "main.py",
        "server.py",
    ],
    main = "main.py",
    data = glob(["webroot/**"]) + [
        "//libs/cybervision-core:shaders",
        "//libs/cybervision-core:renderers",
    ],
    deps = [
        "@pip//click",
    ],
)

# ============================================================================
# Test Targets
# ============================================================================

# Unit tests (vitest)
vitest_bin.vitest_test(
    name = "unit_tests",
    args = [
        "run",
        "--coverage",
        "--config",
        "vitest.config.js",
    ],
    chdir = "apps/cybervision-player",
    data = [
        "vitest.config.js",
        ":node_modules/vitest",
        ":node_modules/@vitest/coverage-v8",
        ":node_modules/happy-dom",
        ":webroot_files",
    ] + glob([
        "tests/unit/**/*.test.js",
        "tests/unit/__mocks__/**/*.js",
    ]),
    tags = ["requires-network"],
)

# E2E tests (Playwright)
playwright_bin.playwright_test(
    name = "playwright_tests",
    args = [
        "test",
        "--config",
        "playwright.config.js",
    ],
    chdir = "apps/cybervision-player",
    data = [
        "playwright.config.js",
        ":node_modules/@playwright/test",
        ":webroot_files",
    ] + glob([
        "tests/e2e/**/*.test.js",
    ]),
    tags = ["requires-network"],
)
