load("@npm_cybervision//:defs.bzl", "npm_link_all_packages")
load("@npm_cybervision//apps/cybervision:vitest/package_json.bzl", vitest_bin = "bin")
load("@npm_cybervision//apps/cybervision:@playwright/test/package_json.bzl", playwright_bin = "bin")

npm_link_all_packages(name = "node_modules")

# Shared test data to avoid conflicting actions
filegroup(
    name = "webroot_files",
    srcs = glob(["webroot/**"]),
)

py_binary(
    name = "cybervision",
    srcs = [
        "__init__.py",
        "main.py",
        "server.py",
    ],
    main = "main.py",
    data = glob(["webroot/**"]),
    deps = [
        "@pip//click",
    ],
)

# ============================================================================
# Test Targets
# ============================================================================

# Unit tests (vitest)
vitest_bin.vitest_test(
    name = "unit_tests",
    args = [
        "run",
        "--config",
        "vitest.config.js",
    ],
    chdir = "apps/cybervision",
    data = [
        "vitest.config.js",
        ":node_modules/vitest",
        ":webroot_files",  # shaders.test.js reads shader files
    ] + glob([
        "tests/unit/**/*.test.js",
    ]),
    tags = ["requires-network"],  # needed for consistent execution metadata
)

# WebGL tests (Playwright) - CI compatible with SwiftShader
playwright_bin.playwright_test(
    name = "playwright_tests",
    args = [
        "test",
        "--project=ci",
        "--config",
        "playwright.config.js",
    ],
    chdir = "apps/cybervision",
    data = [
        "playwright.config.js",
        ":node_modules/@playwright/test",
        ":node_modules/pixelmatch",
        ":node_modules/pngjs",
        ":webroot_files",
    ] + glob([
        "tests/integration/**/*.test.js",
        "tests/e2e/**/*.test.js",
        "tests/e2e/**/*.js",  # Include test helpers
    ]),
    tags = ["requires-network"],  # needs to start http server
)
