[package]
name = "earth-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
metal = "0.28"
cocoa = "0.26"
core-graphics-types = "0.1"
objc = "0.2"
winit = "0.30"
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
rand = "0.8"

[build-dependencies]
cc = "1.0"
