load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "halftone_web",
    srcs = [
        "__init__.py",
        "main.py",
        "server.py",
    ],
    main = "main.py",
    data = glob(["webroot/**"]),
    deps = [
        "//visual/halftone",
        "@pip//pillow",
        "@pip//numpy",
        "@rules_python//python/runfiles",
    ],
)

